[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "confident-extract"
version = "0.1.0"
description = "Deterministic structured extraction from noisy LLM and OCR output. Zero LLM round-trips. Works with msgspec, Pydantic v2, and dataclasses."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [{ name = "Hitarth Desai", email = "hitarthdesai01@gmail.com" }]
maintainers = [{ name = "Hitarth Desai", email = "hitarthdesai01@gmail.com" }]
keywords = [
  "structured extraction",
  "llm output parsing",
  "json repair",
  "json parsing",
  "schema validation",
  "msgspec",
  "pydantic",
  "orjson",
  "llm",
  "large language model",
  "openai",
  "anthropic",
  "claude",
  "chatgpt",
  "ocr",
  "information extraction",
  "natural language processing",
  "nlp",
  "confidence score",
  "async extraction",
  "batch extraction",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: General",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
  "Framework :: AsyncIO",
]
dependencies = [
  "msgspec>=0.18,<1.0",
  "orjson>=3.9,<4.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
ollama = ["ollama>=0.2"]
pydantic = ["pydantic>=2.0,<3.0"]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
dev = [
  "build>=1.2,<2.0",
  "mypy>=1.10,<2.0",
  "pre-commit>=3.7,<5.0",
  "pydantic>=2.0,<3.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-benchmark>=5.0,<6.0",
  "ruff>=0.4,<1.0",
  "twine>=5.1,<7.0",
]

[project.urls]
Homepage = "https://hitarthbuilds.github.io/confident-extract/"
Documentation = "https://hitarthbuilds.github.io/confident-extract/"
Repository = "https://github.com/hitarthbuilds/confident-extract"
Issues = "https://github.com/hitarthbuilds/confident-extract/issues"
Changelog = "https://github.com/hitarthbuilds/confident-extract/blob/master/CHANGELOG.md"
CI = "https://github.com/hitarthbuilds/confident-extract/actions/workflows/ci.yml"

[tool.hatch.build.targets.wheel]
packages = ["confident_extract"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "ANN",
  "ASYNC",
  "B",
  "D",
  "E",
  "F",
  "I",
  "RUF",
  "TC",
  "UP",
]
ignore = [
  "D203",
  "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]
"benchmarks/**" = ["ANN", "D"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["benchmarks", "confident_extract", "tests"]
pretty = true
show_error_codes = true
warn_unreachable = true
